<resources>
    <string name="app_name">Parrot Wings App</string>
    <string name="LoginPrompt">Enter e-mail and password</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="e_mail">e-mail</string>
    <string name="password">Password</string>
    <string name="repit_rassword">Repit Rassword</string>
    <string name="email_pass_empty">E-mail or password can\'t be empty</string>
    <string name="user_name_empty">User name can\'t be empty</string>
    <string name="pass_not_equal_rep_pass">Password does not equal to repit password </string>
    <string name="not_autorize">You don\'t autorized</string>
    <string name="commit">Commit</string>
    <string name="incorrect_amount">Incorrect Ammount</string>
    <string name="empty_name">Recipient name can\'t be empty</string>
    <string name="recipient">Recipient</string>
    <string name="amount">Amount</string>


</resources>
